@@ -1,4 +1,15 @@
-#!/bin/sh
+#!/bin/bash
+
+JAVA_VERSION=$(java -version 2>&1)
+
+if [[ $JAVA_VERSION == *'"1.'* ]];
+then
+        # Java version < 9.0
+        ADD_MODULES=""
+else
+        # Java version >= 9.0
+        ADD_MODULES="--add-modules java.xml.ws"
+fi
 
 sourceName=$1
 if [ -z "$1" ]
@@ -6,4 +17,4 @@ if [ -z "$1" ]
     sourceName="Test.docx"
 fi
 
-java -classpath ./bin/ com.muhimbi.app.WsClient $sourceName
+java $ADD_MODULES -classpath ./bin/ com.muhimbi.app.WsClient $sourceName
